// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeNavigationTableActionOptions should normalize complex navigation table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "edit",
  "inHeader": false,
  "kind": "navigation",
  "name": "edit-redirect",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "relativeTo": false,
  "replace": false,
  "route": "details",
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;

exports[`NormalizeNavigationTableActionOptions should normalize minimal navigation table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": null,
  "inHeader": false,
  "kind": "navigation",
  "name": "details",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "relativeTo": false,
  "replace": false,
  "route": "details",
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;
